components/Footer.module.css
.footerContainer {
    background-color: rgba(0, 0, 30, 1);
    color: #c0c0c0;
    padding: 2rem;
}

.footerContent {
    text-align: center;
    line-height: 1.6;
    margin-bottom: 2rem;
}

.footerLinks {
    list-style: none;
    padding: 0;
    display: flex;
    justify-content: center;
    gap: 1rem;
}

.link {
    color: #4d9ef6;
    text-decoration: none;
    transition: color 0.3s;
}

.link:hover,
.link:focus {
    color: #82c0ff;
}

